Should destroy the user if they text STOP

--- a/test/fixtures/user_locations.yml
+++ b/test/fixtures/user_locations.yml
@@ -8,3 +8,13 @@ john_location:
   longitude: -93.2885455
   magnetic_latitude: 56
 
+dan_location:
+  user: dan
+  city: Minneapolis
+  state: MN
+  postal_code: 55419
+  country: US
+  latitude: 44.9061358
+  longitude: -93.2885455
+  magnetic_latitude: 56
+
