Database config for travis ci

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,3 +12,8 @@ test:
   username: aurora
   min_messages: WARNING
 
+postgres:
+  adapter: postgresql
+  database: aurora_test
+  username: postgres
+
