use the DB environment variable as the username for the test db connection if it exists

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ development:
 test:
   adapter: postgresql
   database: aurora_test
-  username: aurora
+  username: <%= ENV['DB'] || 'aurora' %>
   min_messages: WARNING
 
 postgres:
