Fix TravisCI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: ruby
 rvm:
   - 1.9.3
 env:
-  - DB=postgres
-  - RAILS_SECRET_TOKEN=somesupersecrettoken
+  - DB=postgres RAILS_SECRET_TOKEN=somesupersecrettoken
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
 before_script:
